# pye57

./: .gitignore  .gitmodules  .travis.yml  LICENSE  MANIFEST.in  README.md  __init__.py  appveyor.yml  parse_header.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.github/workflows/: build.yml  dependabot.yml
pye57/: __init__.py  __version__.py  e57.py  libe57_wrapper.cpp  parse_header.py  scan_header.py  utils.py
pye57/tests/: test.py  test_main.py
scripts/: install_xerces_c.ps1  install_xerces_c.sh
src/pye57/: __init__.py  e57.py  exception.py  libe57_wrapper.cpp  scan_header.py  utils.py
tests/: test_libe57.py  test_main.py
tests/test_data/: pumpAVisualReferenceImage.e57  testWithNormals.e57  testWithUnsupportedField.e57  translationWithoutRotation.e57
